working on actual layout

--- a/index.html
+++ b/index.html
@@ -11,5 +11,8 @@
   <body>
     <h1>Data Breach Visualization</h1>
     <script src = "script.js"></script>
+    <svg width = "800" height = "800">
+    <g></g>
+  </svg>
   </body>
 </html>
