--- a/index.html
+++ b/index.html
@@ -9,7 +9,24 @@
     <title></title>
   </head>
   <body>
-    <h1>Data Breach Visualization</h1>
+    <h1 id = "title">Data Breach Visualization</h1>
     <script src = "script.js"></script>
+    <div id = "information">
+    <h1 id = "accounts">accounts compromised:</h1>
+    <h2 id="sensitivity">sensitivity:</h2>
+    <h3 id = "method">method:</h3>
+    <h4 id = "sector">sector:</h4>
+    <h5 id = "company">company:<h5>
+    <h5 id = "story">story:</h5>
+
+    <hr />
+    <h2> Sensitivity Guide</h2>
+    <h4>1: Email Address/Online Information</h4>
+    <h4>2: SSN/Personal Details</h4>
+    <h4>3: Credit Card Information</h4>
+    <h4>4: Health and Other Personal Records</h4>
+    <h4>5: Full details</h4>
+
+    </div>
   </body>
 </html>
